--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,18 @@ body{
 
 }
 
+
+/* Light tracer */
+.glow-hover {
+  position: relative;
+  transition: box-shadow 0.4s ease;
+  border: 2px solid #222;
+}
+
+.glow-hover:hover {
+  box-shadow: 0 0 12px #4f5354, 0 0 20px #29759a inset;
+}
+
+/*book-now */
+
+}
